# tabmgp

./: .gitignore  README.md  acid.py  baseline.py  copula.py  credible_set.py  data.py  data_info.csv  dgp.py  example.py  experiment_setup.py  forward.py  functional.py  optimizer.py  plot.py  plot_settings.py  posterior.py  posterior_runner.py  pyproject.toml  requirements-experiment.txt  requirements-mgp.txt  requirements-posterior.txt  requirements.txt  rollout.py  run-acid.py  run-bb.py  run-cid.py  run-copula.py  run-experiments.sh  run-posterior.py  run-rollout.py  run-tabmgp.py  table.R  table.py  tabmgp.py  tabmgp_minimal.py  utils.py  visual-acid.py  visual-cid.py  visual-coverage.py  (+2 more)
conf/: acid.yaml  bb.yaml  cid.yaml  copula.yaml  forward.yaml  posterior.yaml  rollout.yaml  tabmgp.yaml
conf/dgp/: classification-fixed-gmm.yaml  gamma.yaml  non-normal-wm.yaml  openml.yaml  regression-fixed-dependent.yaml  regression-fixed-non-normal.yaml  regression-wm.yaml
experiments/: README.md  acid.py  baseline.py  data_info.csv  dgp.py  optimizer.py  plot_settings.py  posterior_runner.py  prepare-dgp.py  preprocessor.py  pyproject.toml  requirements-experiment.txt  run-acid.py  run-bayes.py  run-bb.py  run-copula.py  run-experiments.sh  run-tabmgp.py  table.R  table.py  tabmgp.py  utils.py  visual-acid.py  visual-coverage.py  visual-others.py  visual-trace.py
experiments/conf/: acid.yaml  bayes.yaml  bb.yaml  cid.yaml  copula.yaml  dgp.yaml  tabmgp.yaml
experiments/conf/dgp/: classification-fixed.yaml  classification.yaml  dependent-error-wm.yaml  regression-fixed.yaml  regression.yaml
experiments/tests/: test_baseline_shape_consistency.py  test_run_tabmgp_recovery.py  test_tabmgp_mps_device.py  test_tabmgp_sample_shape.py  test_trace_comparison.py
pr_copula/: copula_density_functions.py  sample_copula_regression_functions.py
