[project]
name = "tabmgp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "blackjax",
    "chex",
    "equinox",
    "hydra-core",
    "jax",
    "jaxtyping",
    "matplotlib",
    "numpy",
    "openml",
    "optax",
    "pandas",
    "pytest>=9.0.3",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tabpfn==6.3.1",
    "torch",
    "tqdm",
    "ucimlrepo",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
addopts = ["-m", "not slow"]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: integration tests that run experiment scripts and write outputs",
]
