[project]
name = "tabmgp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "blackjax",
    "chex",
    "equinox",
    "hydra-core",
    "jax",
    "jaxtyping",
    "matplotlib",
    "numpy",
    "openml",
    "optax",
    "pandas",
    "pytest>=9.0.3",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tabpfn==6.3.1",
    "torch",
    "tqdm",
    "ucimlrepo",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
]
cuda = [
    "jax[cuda13]; sys_platform == 'linux'",
    "torch; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
addopts = ["-m", "not slow"]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: integration tests that run experiment scripts and write outputs",
]
